Fix line spacing between side menu options

--- a/css/main.css
+++ b/css/main.css
@@ -218,6 +218,11 @@ nav ul {
   padding: 0;
 }
 
+.dropdown-menu-side {
+  margin: 0;
+  padding: 0;
+}
+
 .hide-menu {
   display: none;
 }
